# emu

./: .cruft.json  .docker.cfg  .dockerignore  .env  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Readme.md  bootstrap.sh  buildout.cfg  custom.cfg.example  docker-compose.yml  environment-docs.yml  environment.yml  install.sh  pywps.cfg  requirements.sh  requirements.txt  requirements_dev.txt  requirements_gis.txt  setup.cfg  setup.py  spec-file.txt  spec-list.txt  threddsCatalog.xml  tox.ini  versions.cfg
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
docs/: Makefile  make.bat
emu/: __init__.py  __version__.py  cli.py  default.cfg  demo.py  exceptions.py
etc/: demo.cfg
processes/: __init__.py  testing.py  wps_bftest.py  wps_helloworld.py  wps_inout.py  wps_multiplesources.py  wps_wordcounter.py
profiles/: base.cfg  debug.cfg  development.cfg  prod.cfg  versions.cfg
requirements/: conda_pinned  deploy.txt
tests/: __init__.py  common.py  test.cfg  test_emu.py  test_output_formats.py  test_wps_answertolife.py  test_wps_bbox.py  test_wps_caps.py  test_wps_chomsky.py  test_wps_dummy.py  test_wps_dummyprocess.py  test_wps_error.py  test_wps_esgf_subset.py  test_wps_geo.py  test_wps_geospatial.py  test_wps_hello.py  test_wps_helloworld.py  test_wps_inout.py  test_wps_multiple_outputs.py  test_wps_nc_to_dap.py  test_wps_ncmeta.py  test_wps_ncml.py  test_wps_nonpyid.py  test_wps_output_formats.py  test_wps_pandas.py  test_wps_poly_centroid.py  (+4 more)
(+71 files in other folders)
