[bumpversion]
current_version = 0.11.1
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:emu/__version__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:docs/source/conf.py]
search = release = '{current_version}'
replace = release = '{new_version}'

[bumpversion:file:Dockerfile]
search = Version="{current_version}"
replace = Version="{new_version}"

[tool:pytest]
addopts =
	--strict
	--tb=native
python_files = test_*.py
markers =
	online: mark test to need internet connection
	slow: mark test to be slow
	flaky: mark test to be flaky
	network: mark test to need network
	netcdf: mark test to netcdf

[flake8]
ignore = F401,E402
max-line-length = 120
exclude =
	.git,
	__pycache__,
	docs/source/conf.py,
	build,
	dist,
	src,

[doc8]
ignore-path = docs/build,docs/source/_templates,docs/source/_static
max-line-length = 120
